--- a/windup-core/windup-engine-cdi/src/main/resources/reports/resources/css/windup-source.css
+++ b/windup-core/windup-engine-cdi/src/main/resources/reports/resources/css/windup-source.css
@@ -1,3 +1,7 @@
+pre#source {
+	background: #F9F9F9;	
+}
+
 div.rightColumn {
     float: right;
     border-left: 1px solid #CCC;
@@ -109,29 +113,13 @@ tr td:nth-child(2) {
 	width: 70px;	
 }
 
-body.sourceReport {
-	margin:0;
-	padding:0;
-	font-family : "Lucida Grand", Verdana, Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    border-collapse : collapse; 
-    border-style: none;
-	background: #EFEFEF;
+h1 > small {
+	font-size: 24px !important;
 }
 
 pre {
 	font-family : "Lucida Grand", Verdana, Arial, Helvetica, sans-serif;
 }
-
-body.windupReport {
-	margin:0;
-	padding:0;
-	font-family : "Lucida Grand", Verdana, Arial, Helvetica, sans-serif;
-    font-size: 10pt;
-    border-collapse : collapse; 
-    border-style: none;
-}
-
 
 div.reportHeader {
 	padding:5px 15px;
@@ -389,12 +377,6 @@ div.inline-comment-heading h2.severe {
 }
 div.inline-comment-heading h2.critical {
 	background-image: url("img/styles/glyphicons_196_circle_exclamation_mark.png");
-}
-
-
-body {
-	font-family: "Lucida Grand", Verdana, Arial, Helvetica, sans-serif;
-	font-size: 11px;
 }
 
 pre {
